welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:3: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono3:3: error: expected start of definition
override def run() {
         ^